# TCS_AMD_Hackthon

./: README.md  README_SETUP.md  config.py  main.py  pyproject.toml  requirements.lock.txt  requirements.txt  smoke_test.py  test.py
backend/data/: synthetic_apps.json
chroma_db/: chroma.sqlite3
data/: results.json
knowledge_base/: 01_pattern_rehost.md  02_pattern_replatform.md  03_pattern_refactor.md  04_pattern_replace.md  05_pattern_retire.md  06_pattern_retain.md  07_antipattern_rehost_vs_retire.md  08_antipattern_refactor_low_value.md  09_antipattern_retain_insecure.md  10_gotcha_hidden_dependencies.md  11_gotcha_compliance_deferral.md  12_gotcha_vendor_lockin.md  13_rationale_risk_scoring.md  14_rationale_disambiguation.md  15_rationale_defensible_explanation.md
src/: api.py  app.py  crew.py  ingect_kb.py  rag.py  run_all.py
